# serializer version: 1
# name: test_annual_sharpe_plot_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Annual Sharpe Ratio by Year',
    }),
    'num_traces': 1,
    'traces': list([
      dict({
        'name': 'returns',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_compare_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Comparison vs Benchmark',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_correlation_heatmap_structure
  dict({
    'layout': dict({
      'hovermode': None,
      'plot_bgcolor': None,
      'subplot_titles': list([
      ]),
      'title': 'Correlation heatmap',
    }),
    'num_traces': 1,
    'traces': list([
      dict({
        'name': '0',
        'type': 'Heatmap',
      }),
    ]),
  })
# ---
# name: test_daily_returns_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Daily Returns',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Bar',
      }),
      dict({
        'name': 'META',
        'type': 'Bar',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_data_rolling_sharpe_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Rolling Sharpe Ratio',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_data_rolling_volatility_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Rolling Volatility',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_distribution_structure
  dict({
    'layout': dict({
      'hovermode': None,
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'AAPL',
        'META',
        'SPY -- Benchmark',
      ]),
      'title': 'Return Distribution by Period',
    }),
    'num_traces': 15,
    'traces': list([
      dict({
        'name': 'Daily',
        'type': 'Box',
      }),
      dict({
        'name': 'Weekly',
        'type': 'Box',
      }),
      dict({
        'name': 'Monthly',
        'type': 'Box',
      }),
      dict({
        'name': 'Quarterly',
        'type': 'Box',
      }),
      dict({
        'name': 'Yearly',
        'type': 'Box',
      }),
      dict({
        'name': 'Daily',
        'type': 'Box',
      }),
      dict({
        'name': 'Weekly',
        'type': 'Box',
      }),
      dict({
        'name': 'Monthly',
        'type': 'Box',
      }),
      dict({
        'name': 'Quarterly',
        'type': 'Box',
      }),
      dict({
        'name': 'Yearly',
        'type': 'Box',
      }),
      dict({
        'name': 'Daily',
        'type': 'Box',
      }),
      dict({
        'name': 'Weekly',
        'type': 'Box',
      }),
      dict({
        'name': 'Monthly',
        'type': 'Box',
      }),
      dict({
        'name': 'Quarterly',
        'type': 'Box',
      }),
      dict({
        'name': 'Yearly',
        'type': 'Box',
      }),
    ]),
  })
# ---
# name: test_drawdown_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Drawdowns',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_drawdowns_periods_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        '#1 -81.8%',
        '#2 -78.1%',
        '#3 -60.9%',
      ]),
      'title': 'Top Drawdown Periods — AAPL',
    }),
    'num_traces': 1,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_earnings_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Portfolio Earnings',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_histogram_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Returns Distribution',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Histogram',
      }),
      dict({
        'name': 'META',
        'type': 'Histogram',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Histogram',
      }),
    ]),
  })
# ---
# name: test_lagged_performance_plot_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'NAV accumulated by lag',
    }),
    'num_traces': 5,
    'traces': list([
      dict({
        'name': 'lag 0',
        'type': 'Scatter',
      }),
      dict({
        'name': 'lag 1',
        'type': 'Scatter',
      }),
      dict({
        'name': 'lag 2',
        'type': 'Scatter',
      }),
      dict({
        'name': 'lag 3',
        'type': 'Scatter',
      }),
      dict({
        'name': 'lag 4',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_lead_lag_ir_plot_structure
  dict({
    'layout': dict({
      'hovermode': 'x',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Lead/Lag Information Ratio (Sharpe) by Lag',
    }),
    'num_traces': 1,
    'traces': list([
      dict({
        'name': 'Sharpe by lag',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_log_returns_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Log Returns',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_montecarlo_distribution_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'AAPL observed',
        'META observed',
        'SPY -- Benchmark observed',
      ]),
      'title': 'Monte Carlo Distribution',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Histogram',
      }),
      dict({
        'name': 'META',
        'type': 'Histogram',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Histogram',
      }),
    ]),
  })
# ---
# name: test_montecarlo_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Monte Carlo Simulation',
    }),
    'num_traces': 33,
    'traces': list([
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL Observed',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META Observed',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Sim',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark Observed',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_monthly_heatmap_structure
  dict({
    'layout': dict({
      'hovermode': None,
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Monthly Returns Heatmap — AAPL',
    }),
    'num_traces': 1,
    'traces': list([
      dict({
        'name': None,
        'type': 'Heatmap',
      }),
    ]),
  })
# ---
# name: test_monthly_returns_heatmap_structure
  dict({
    'layout': dict({
      'hovermode': None,
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Monthly Returns Heatmap',
    }),
    'num_traces': 1,
    'traces': list([
      dict({
        'name': None,
        'type': 'Heatmap',
      }),
    ]),
  })
# ---
# name: test_monthly_returns_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Monthly Returns',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Bar',
      }),
      dict({
        'name': 'META',
        'type': 'Bar',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_plot_snapshot_log_scale_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'Cumulative Returns',
        'Drawdowns',
        'Monthly Returns',
      ]),
      'title': 'AAPL vs META vs SPY -- Benchmark Performance Dashboard',
    }),
    'num_traces': 9,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL',
        'type': 'Bar',
      }),
      dict({
        'name': 'META',
        'type': 'Bar',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_plot_snapshot_single_symbol_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'Cumulative Returns',
        'Drawdowns',
        'Monthly Returns',
      ]),
      'title': 'Meta Performance Dashboard',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'Meta',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Meta',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Meta',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_plot_snapshot_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'Cumulative Returns',
        'Drawdowns',
        'Monthly Returns',
      ]),
      'title': 'AAPL vs META vs SPY -- Benchmark Performance Dashboard',
    }),
    'num_traces': 9,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL',
        'type': 'Bar',
      }),
      dict({
        'name': 'META',
        'type': 'Bar',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Bar',
      }),
    ]),
  })
# ---
# name: test_returns_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Cumulative Returns',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_rolling_beta_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Rolling Beta',
    }),
    'num_traces': 4,
    'traces': list([
      dict({
        'name': 'AAPL (126d)',
        'type': 'Scatter',
      }),
      dict({
        'name': 'AAPL (252d)',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META (126d)',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META (252d)',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_rolling_sharpe_plot_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Rolling Sharpe Ratio (63-period window)',
    }),
    'num_traces': 1,
    'traces': list([
      dict({
        'name': 'returns',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_rolling_sortino_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Rolling Sortino Ratio',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Scatter',
      }),
      dict({
        'name': 'META',
        'type': 'Scatter',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_rolling_volatility_plot_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Rolling Volatility (63-period window)',
    }),
    'num_traces': 1,
    'traces': list([
      dict({
        'name': 'returns',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_smoothed_holdings_performance_plot_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'NAV accumulated by smoothed holdings',
    }),
    'num_traces': 5,
    'traces': list([
      dict({
        'name': 'smooth 0',
        'type': 'Scatter',
      }),
      dict({
        'name': 'smooth 1',
        'type': 'Scatter',
      }),
      dict({
        'name': 'smooth 2',
        'type': 'Scatter',
      }),
      dict({
        'name': 'smooth 3',
        'type': 'Scatter',
      }),
      dict({
        'name': 'smooth 4',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_snapshot_log_scale_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'Accumulated Profit',
        'Drawdown',
      ]),
      'title': 'Performance Dashboard',
    }),
    'num_traces': 4,
    'traces': list([
      dict({
        'name': 'NAV',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Tilt',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Timing',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Drawdown',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_snapshot_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
        'Accumulated Profit',
        'Drawdown',
      ]),
      'title': 'Performance Dashboard',
    }),
    'num_traces': 4,
    'traces': list([
      dict({
        'name': 'NAV',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Tilt',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Timing',
        'type': 'Scatter',
      }),
      dict({
        'name': 'Drawdown',
        'type': 'Scatter',
      }),
    ]),
  })
# ---
# name: test_yearly_returns_structure
  dict({
    'layout': dict({
      'hovermode': 'x unified',
      'plot_bgcolor': 'white',
      'subplot_titles': list([
      ]),
      'title': 'Yearly Returns',
    }),
    'num_traces': 3,
    'traces': list([
      dict({
        'name': 'AAPL',
        'type': 'Bar',
      }),
      dict({
        'name': 'META',
        'type': 'Bar',
      }),
      dict({
        'name': 'SPY -- Benchmark',
        'type': 'Bar',
      }),
    ]),
  })
# ---
